--- a/index.html
+++ b/index.html
@@ -1,32 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang= "en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel ="stylesheet" href="style.css">
+    <title>Gerador de Tabuada</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="Dark Green Simple Dark Fitness Bio-Link Website.png" alt="">
-    <h1>Conecta causa</h1>
-    <p>Acreditamos que pequenas atitudes geram grandes transformações. Ao conectar quem quer ajudar com quem precisa de ajuda, criamos uma rede de solidariedade que impacta diretamente a vida de muitas pessoas.</p>
-    <a href="">Saiba mais</a>
-    <br/>
-    <br/>
+    <div class="container">
+        <h1>Gerador de Tabuada</h1>
 
-<h2>Formulário de Cadastro</h2>
-<form>
-  <label for="nome">Nome:</label>
-  <input type="text" id="nome" name="nome"><br><br>
-  <label for="email">E-mail:</label>
-  <input type="email" id="email" name="email"><br><br>
-  <label for="telefone">Telefone:</label>
-  <input type="tel" id="telefone" name="telefone"
-  <label for="ONG">Escolha a ONG para doação:</label>
-  <input type="ong" id="ONG" name="ONG"><br><br>
-  <input type="submit" value="Cadastrar">
+        <label for="number">Digite um número:</label>
+        <input type="number" id="numeroInput" placeholder="Ex.: 7">
+        <button id="gerarTabuada">Gerar Tabuada</button>
 
-</form>
-    <P>Um site confiável e seguro, que busca o fortalecimento das causas sociais.</P>
+        <div id="resultadoTabuada"></div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
